k8s/k8s-challenge-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-challenge-svc
  labels:
    app: k8s-challenge-svc
spec:
  type: ClusterIP
  selector:
    app: k8s-challenge
  ports:
    - protocol: TCP
      name: http-svc
      port: 4000
      targetPort: http
